Fixed hero organisms spacing

--- a/stories/Organism/Blocks/Heros/Internal-Page-Heros/pagehero.scss
+++ b/stories/Organism/Blocks/Heros/Internal-Page-Heros/pagehero.scss
@@ -3,22 +3,20 @@
 @import '../../../../assets/scss/base';
 
 /* page hero start */
-.page {
-  &__hero {
-    &_wrapper {
-      min-height: 642px;
-      position: relative;
+.pagehero {
+  &-wrapper {
+    min-height: 642px;
+    position: relative;
 
-      @include devicebreak(medium) {
-        min-height: 746px;
-      }
-
-      .breadcrumb__wrapper {
-        padding: 0 $spacing-12;
-      }
+    @include devicebreak(medium) {
+      min-height: 746px;
     }
 
-    &_background {
+    .breadcrumb__wrapper {
+      padding: 0 $spacing-12;
+    }
+
+    &__background {
       @extend %absolute__overflow;
 
       img {
@@ -28,23 +26,13 @@
       }
     }
 
-    &_content {
-      margin-left: 0;
-      padding-top: $spacing-80;
-      position: relative;
-
-      @include devicebreak(medium) {
-        margin-left: $spacing-64;
-      }
-    }
-
-    &_title {
+    &__title {
       font-family: $Font-Family-SohneBold;
       padding: 0 $spacing-12;
       text-transform: uppercase;
     }
 
-    &_subtitle {
+    &__subtitle {
       margin-bottom: $spacing-08;
       margin-top: $spacing-96;
       padding: 0 $spacing-12;
@@ -55,31 +43,66 @@
     }
   }
 
-  &hero {
-    &__option {
-      &_title {
-        margin-bottom: $spacing-08;
-        margin-top: $spacing-64;
+  &__content {
+    margin-left: 0;
+    padding-top: $spacing-80;
+    position: relative;
 
-        @include devicebreak(medium) {
-          margin-top: 197px;
-        }
+    @include devicebreak(medium) {
+      margin-left: $spacing-64;
+      padding-right: 23.5px;
+    }
+  }
+
+  &_right_box {
+    height: auto;
+    position: relative;
+    width: 100%;
+
+    @include devicebreak(medium) {
+      height: 100%;
+      position: absolute;
+    }
+
+    video {
+      height: auto;
+
+      @include devicebreak(medium) {
+        height: 100%;
       }
+    }
 
-      &_subtitle {
-        font-family: $Font-Family-SohneBold;
-        margin-bottom: $spacing-40;
-        text-transform: uppercase;
+    img {
+      height: auto;
+      width: 100%;
 
-        @include devicebreak(medium) {
-          margin-bottom: 240px;
-        }
+      @include devicebreak(medium) {
+        height: 100%;
+        max-width: none;
+        width: auto;
       }
     }
   }
 
-  .hero_right_box {
-    margin-bottom: 0;
+  &-option {
+    &__title {
+      margin-bottom: $spacing-08;
+      margin-top: $spacing-64;
+
+      @include devicebreak(medium) {
+        margin-top: 197px;
+      }
+    }
+
+    &__subtitle {
+      font-family: $Font-Family-SohneBold;
+      margin-bottom: $spacing-40;
+      text-transform: uppercase;
+
+      @include devicebreak(medium) {
+        margin-bottom: 240px;
+      }
+    }
   }
 }
 
@@ -87,10 +110,11 @@
   .pagehero {
     &__content {
       margin-left: 0;
-      margin-right: 0;
 
       @include devicebreak(medium) {
-        margin-right: 8.33%;
+        margin-right: $spacing-64;
+        padding-left: 23.5px;
+        padding-right: 0;
       }
     }
   }
